objects/Account__x.object
<CustomObject>
    <externalDataSource>BMX_EXTERNAL</externalDataSource>
    <externalName>Account</externalName>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <externalDeveloperName>AccountNumber</externalDeveloperName>
        <label>Tax Number</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSource__c</fullName>
        <externalDeveloperName>AccountSource</externalDeveloperName>
        <label>Account Source</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Seminar - Internal</fullName>
                </value>
                <value>
                    <fullName>Seminar - Partner</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Assignment_c__c</fullName>
        <externalDeveloperName>Account_Assignment__c</externalDeveloperName>
        <label>Account Assignment</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y1</fullName>
                    <label>Y1-Domestic</label>
                </value>
                <value>
                    <fullName>Y2</fullName>
                    <label>Y2-Export</label>
                </value>
                <value>
                    <fullName>Y3</fullName>
                    <label>Y3-Group</label>
                </value>
                <value>
                    <fullName>Z1</fullName>
                    <label>Z1-US Cardinal distrib</label>
                </value>
                <value>
                    <fullName>Z2</fullName>
                    <label>Z2-US Fischer distrib</label>
                </value>
                <value>
                    <fullName>Z3</fullName>
                    <label>Z3-US Other distrib</label>
                </value>
                <value>
                    <fullName>ZZ</fullName>
                    <label>ZZ-Migration</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_ID_18_c__c</fullName>
        <externalDeveloperName>Account_ID_18__c</externalDeveloperName>
        <label>Account ID 18</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accreditation_c__c</fullName>
        <externalDeveloperName>Accreditation__c</externalDeveloperName>
        <label>Accreditation</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISO 17025</fullName>
                </value>
                <value>
                    <fullName>ISO 15189</fullName>
                </value>
                <value>
                    <fullName>no accreditation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accreditation_modif_c__c</fullName>
        <externalDeveloperName>Accreditation_modif__c</externalDeveloperName>
        <label>-Accreditation</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISO 17025</fullName>
                </value>
                <value>
                    <fullName>ISO 15189</fullName>
                </value>
                <value>
                    <fullName>no accreditation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activities_c__c</fullName>
        <externalDeveloperName>Activities__c</externalDeveloperName>
        <label>Activities</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multidisciplinary</fullName>
                </value>
                <value>
                    <fullName>Bacteriology</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Virology</fullName>
                </value>
                <value>
                    <fullName>Hygiene</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Collection centers</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <externalDeveloperName>AnnualRevenue</externalDeveloperName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status_c__c</fullName>
        <externalDeveloperName>Approval_Status__c</externalDeveloperName>
        <label>Approval Status</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BackOrderCheckbox_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>BackOrderCheckbox__c</externalDeveloperName>
        <label>Has Late Order</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BackOrderIndicator_c__c</fullName>
        <externalDeveloperName>BackOrderIndicator__c</externalDeveloperName>
        <label>Orders Delivery</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BalanceOverdue_c__c</fullName>
        <externalDeveloperName>BalanceOverdue__c</externalDeveloperName>
        <label>Balance Overdue</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Beef_cow_c__c</fullName>
        <externalDeveloperName>Beef_cow__c</externalDeveloperName>
        <label>Beef cow</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <externalDeveloperName>BillingAddress</externalDeveloperName>
        <label>Sales Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <externalDeveloperName>BillingCity</externalDeveloperName>
        <label>Sales Address City</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountryCode__c</fullName>
        <externalDeveloperName>BillingCountryCode</externalDeveloperName>
        <label>Sales Address Country Code</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>Bhutan</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>Bolivia, Plurinational State of</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>Bonaire, Sint Eustatius and Saba</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>Botswana</label>
                </value>
                <value>
                    <fullName>BV</fullName>
                    <label>Bouvet Island</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <externalDeveloperName>BillingCountry</externalDeveloperName>
        <label>Sales Address Country</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>BillingGeocodeAccuracy</externalDeveloperName>
        <label>Billing Geocode Accuracy</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingLatitude__c</fullName>
        <externalDeveloperName>BillingLatitude</externalDeveloperName>
        <label>Sales Address Latitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingLongitude__c</fullName>
        <externalDeveloperName>BillingLongitude</externalDeveloperName>
        <label>Sales Address Longitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <externalDeveloperName>BillingPostalCode</externalDeveloperName>
        <label>Sales Address Zip/Postal Code</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <externalDeveloperName>BillingState</externalDeveloperName>
        <label>Sales Address State/Province</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <externalDeveloperName>BillingStreet</externalDeveloperName>
        <label>Sales Address Street</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CVM_Level_1_c__c</fullName>
        <externalDeveloperName>CVM_Level_1__c</externalDeveloperName>
        <label>CVM Level</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CVM_c__c</fullName>
        <externalDeveloperName>CVM__c</externalDeveloperName>
        <label>CVM</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category_c__c</fullName>
        <externalDeveloperName>Category__c</externalDeveloperName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>000</fullName>
                    <label>000 - bioMerieux Companies</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>100 - Commercial labs</label>
                </value>
                <value>
                    <fullName>1A2</fullName>
                    <label>1A2 - DE-Laborfacharzt</label>
                </value>
                <value>
                    <fullName>1C1</fullName>
                    <label>1C1 - US-Lg comm'l ref lab</label>
                </value>
                <value>
                    <fullName>1C2</fullName>
                    <label>1C2 - US-Other comm'l lab</label>
                </value>
                <value>
                    <fullName>1C3</fullName>
                    <label>1C3 - US-Public Health Fac</label>
                </value>
                <value>
                    <fullName>1C4</fullName>
                    <label>1C4 - US-Fertility Clinic</label>
                </value>
                <value>
                    <fullName>1C5</fullName>
                    <label>1C5 - US-Veterinary Fac</label>
                </value>
                <value>
                    <fullName>1C6</fullName>
                    <label>1C6 - US-Doctor's grp prac</label>
                </value>
                <value>
                    <fullName>1D1</fullName>
                    <label>1D1 - FR Lab &lt; 50 Dossiers</label>
                </value>
                <value>
                    <fullName>1D2</fullName>
                    <label>1D2 - FR Lab &lt; 25 Dossier</label>
                </value>
                <value>
                    <fullName>1D3</fullName>
                    <label>1D3 - FR Lab télévente</label>
                </value>
                <value>
                    <fullName>1D4</fullName>
                    <label>1D4 - FR Lab 50/100 dossie</label>
                </value>
                <value>
                    <fullName>1D5</fullName>
                    <label>1D5 - FR Lab 100/200 doss</label>
                </value>
                <value>
                    <fullName>1D6</fullName>
                    <label>1D6 - FR Lab 200/400 Dossi</label>
                </value>
                <value>
                    <fullName>1D7</fullName>
                    <label>1D7 - FR Lab 400/ 800 Doss</label>
                </value>
                <value>
                    <fullName>1D8</fullName>
                    <label>1D8 - FR Lab &gt; 800 Dossier</label>
                </value>
                <value>
                    <fullName>1D9</fullName>
                    <label>1D9 - FR SEL</label>
                </value>
                <value>
                    <fullName>1E1</fullName>
                    <label>1E1 - FR SEL &lt; 100 Dossier</label>
                </value>
                <value>
                    <fullName>1E2</fullName>
                    <label>1E2 - FR SEL 100/200 Dossi</label>
                </value>
                <value>
                    <fullName>1E3</fullName>
                    <label>1E3 - FR SEL 200/400 Dossi</label>
                </value>
                <value>
                    <fullName>1E4</fullName>
                    <label>1E4 - FR SEL 400/800 Dossi</label>
                </value>
                <value>
                    <fullName>1E5</fullName>
                    <label>1E5 - FR SEL 800/1600 Doss</label>
                </value>
                <value>
                    <fullName>1E6</fullName>
                    <label>1E6 - FR SEL &gt; 1600 dossie</label>
                </value>
                <value>
                    <fullName>1E7</fullName>
                    <label>1E7 - FR Lab Etrangers</label>
                </value>
                <value>
                    <fullName>1E8</fullName>
                    <label>1E8 - FR Lab non affectés</label>
                </value>
                <value>
                    <fullName>1G0</fullName>
                    <label>1G0 - IB Lab Televenta</label>
                </value>
                <value>
                    <fullName>1G1</fullName>
                    <label>1G1 -IB Lab &lt; 25 D</label>
                </value>
                <value>
                    <fullName>1G2</fullName>
                    <label>1G2 - IB Lab 25 - 50 D</label>
                </value>
                <value>
                    <fullName>1G3</fullName>
                    <label>1G3 - IB Lab 50 - 100 D</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Challenge_testing_c__c</fullName>
        <externalDeveloperName>Challenge_testing__c</externalDeveloperName>
        <label>Challenge testing</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments_c__c</fullName>
        <externalDeveloperName>Comments__c</externalDeveloperName>
        <label>Comments</label>
        <length>32768</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Name_c__c</fullName>
        <externalDeveloperName>Commercial_Name__c</externalDeveloperName>
        <label>Commercial Name</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Companion_c__c</fullName>
        <externalDeveloperName>Companion__c</externalDeveloperName>
        <label>Companion</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>Received Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>Sent Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Approved_c__c</fullName>
        <externalDeveloperName>Credit_Approved__c</externalDeveloperName>
        <label>Credit Approved</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cronobacter_c__c</fullName>
        <externalDeveloperName>Cronobacter__c</externalDeveloperName>
        <label>Cronobacter</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_c__c</fullName>
        <externalDeveloperName>Currency__c</externalDeveloperName>
        <label>Currency</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Since_c__c</fullName>
        <externalDeveloperName>Customer_Since__c</externalDeveloperName>
        <label>Customer Since Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_type__c</fullName>
        <externalDeveloperName>Customer_type__c</externalDeveloperName>
        <label>Customer type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SCA</fullName>
                    <label>Strategic Account</label>
                </value>
                <value>
                    <fullName>KA</fullName>
                    <label>Key Account</label>
                </value>
                <value>
                    <fullName>SDA</fullName>
                    <label>General Customer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dairy_cow_c__c</fullName>
        <externalDeveloperName>Dairy_cow__c</externalDeveloperName>
        <label>Dairy cow</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Account Description</label>
        <length>32000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_modif_c__c</fullName>
        <externalDeveloperName>Description_modif__c</externalDeveloperName>
        <label>-Description</label>
        <length>32768</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DistribGroupID_c__c</fullName>
        <externalDeveloperName>DistribGroupID__c</externalDeveloperName>
        <label>Distributor Public Group ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistribQueueID_c__c</fullName>
        <externalDeveloperName>DistribQueueID__c</externalDeveloperName>
        <label>Distributor Queue ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistributorCategory_c__c</fullName>
        <externalDeveloperName>DistributorCategory__c</externalDeveloperName>
        <label>Distributor Category</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distributor_Name_Reporting_c__c</fullName>
        <externalDeveloperName>Distributor_Name_Reporting__c</externalDeveloperName>
        <label>Distributor Name (Reporting)</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Distributor__c</externalDeveloperName>
        <label>Distributor</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>District_Formula_c__c</fullName>
        <externalDeveloperName>District_Formula__c</externalDeveloperName>
        <label>District</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>District_c__c</fullName>
        <externalDeveloperName>District__c</externalDeveloperName>
        <label>District</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>9299</fullName>
                    <label>9299 - Food House</label>
                </value>
                <value>
                    <fullName>AS1010</fullName>
                    <label>AS1010 - US Micro &amp; Vidas AS NE</label>
                </value>
                <value>
                    <fullName>AS1020</fullName>
                    <label>AS1020 - US Micro &amp; Vidas AS SE</label>
                </value>
                <value>
                    <fullName>AS1030</fullName>
                    <label>AS1030 - US Micro &amp; Vidas AS W</label>
                </value>
                <value>
                    <fullName>BFire</fullName>
                    <label>BFire - BFire</label>
                </value>
                <value>
                    <fullName>CA1014</fullName>
                    <label>CA1014 - US CA CLN</label>
                </value>
                <value>
                    <fullName>CA1016</fullName>
                    <label>CA1016 - US CA bioFOOD</label>
                </value>
                <value>
                    <fullName>CM1013</fullName>
                    <label>CM1013 - US CIM</label>
                </value>
                <value>
                    <fullName>MC1012</fullName>
                    <label>MC1012 - US Molecular AS</label>
                </value>
                <value>
                    <fullName>US1010</fullName>
                    <label>US1010 - North East</label>
                </value>
                <value>
                    <fullName>US1012</fullName>
                    <label>US1012 - North East IA</label>
                </value>
                <value>
                    <fullName>US1020</fullName>
                    <label>US1020 - Philadelphia</label>
                </value>
                <value>
                    <fullName>US1021</fullName>
                    <label>US1021 - US Micro &amp; Vidas AS MA</label>
                </value>
                <value>
                    <fullName>US1022</fullName>
                    <label>US1022 - Philadelphia IA</label>
                </value>
                <value>
                    <fullName>US1030</fullName>
                    <label>US1030 - Mid Atlantic</label>
                </value>
                <value>
                    <fullName>US1031</fullName>
                    <label>US1031 - US Micro &amp; Vidas AS SA</label>
                </value>
                <value>
                    <fullName>US1032</fullName>
                    <label>US1032 - Mid Atlantic IA</label>
                </value>
                <value>
                    <fullName>US1040</fullName>
                    <label>US1040 - South East</label>
                </value>
                <value>
                    <fullName>US1042</fullName>
                    <label>US1042 - South East IA</label>
                </value>
                <value>
                    <fullName>US1050</fullName>
                    <label>US1050 - South West</label>
                </value>
                <value>
                    <fullName>US1051</fullName>
                    <label>US1051 - US Micro &amp; Vidas AS SW</label>
                </value>
                <value>
                    <fullName>US1052</fullName>
                    <label>US1052 - South West IA</label>
                </value>
                <value>
                    <fullName>US1060</fullName>
                    <label>US1060 - Great Lakes</label>
                </value>
                <value>
                    <fullName>US1061</fullName>
                    <label>US1061 - US Micro &amp; Vidas AS GL</label>
                </value>
                <value>
                    <fullName>US1062</fullName>
                    <label>US1062 - Great Lakes IA</label>
                </value>
                <value>
                    <fullName>US1070</fullName>
                    <label>US1070 - Mid West</label>
                </value>
                <value>
                    <fullName>US1071</fullName>
                    <label>US1071 - US Micro &amp; Vidas AS MW</label>
                </value>
                <value>
                    <fullName>US1072</fullName>
                    <label>US1072 - Mid west IA</label>
                </value>
                <value>
                    <fullName>US1080</fullName>
                    <label>US1080 - West</label>
                </value>
                <value>
                    <fullName>US1082</fullName>
                    <label>US1082 - West IA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>